--- a/html/login.html
+++ b/html/login.html
@@ -10,13 +10,13 @@
 
 
 	<!-- Bootstrap 核心 CSS 文件 --> 
-	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../lib/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 --> 
-	<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+	<script src="../lib/jquery-3.2.1.min.js"></script>
 
 	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="../lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../css/login_page.css">
 
