--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,10 @@
   <!-- 违规原因统计分析样式 -->
   <link rel="stylesheet" type="text/css" href="../css/ana_1.css">
 
+  <!-- 用户管理样式 -->
+  <link rel="stylesheet" type="text/css" href="../css/user_manage.css">
+
+
   <!-- tableexport插件所需css -->
   <link href="../lib/tableexport/dist/css/tableexport.min.css" rel="stylesheet">
 
@@ -53,14 +57,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">用户名</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">注销登录</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
+          
         </div>
       </div>
     </nav>
@@ -168,6 +170,14 @@
             <!-- 首页管理 -->
             <div id = "content_home">
               <div class="row">
+                <div id = "nav_ana_1" class="col-md-3 my_nav_1">
+                  违规原因统计分析
+                </div>
+
+                <div id="nav_ana_2" class="col-md-3 my_nav_1">
+                  医疗机构医保金额统计分析
+                </div>
+
                 <div class="col-md-3 my_nav">
                     <span id = "add_my_nav" class="glyphicon glyphicon-plus"></span>
                   自定义导航
@@ -361,8 +371,31 @@
 
             <!-- 用户管理 -->
             <div id = "content_manage">
-              用户管理
+                <div id = "user_inf">
+                  
+                </div>
+
+                <div id = "user_add">
+                  <form class="form-inline">
+
+                    <div class="form-group">
+                      <label>用户名</label>
+                      <input type="text" class="form-control" id="add_user_name"> 
+                    </div>
+  
+                    <div class="form-group">
+                      <label">密码</label>
+                      <input type="text" class="form-control" id="add_user_password">
+                    </div>
+                    <button type='button' class='btn btn-primary user_add_button'>增加用户</button>
+                    <div id = "tip_message"></div>
+                  </form>
+                </div>
             </div>
+
+
+
+
 
           </div>     <!-- content -->
 
@@ -385,18 +418,18 @@
           <div class="modal-body">
           <!-- 自定义模态框内容 -->
             <div>
-               <p>违规原因统计分析</p> 
+               <p>违规原因统计分析 <input type="checkbox" name="ana_1"></p>
             </div>
             <div>
-               <p>医疗机构医保金额统计分析</p>
+               <p>医疗机构医保金额统计分析 <input type="checkbox" name="ana_2"></p>
             </div>
 
           <!-- 下部分界线 -->
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" id = "modal_add" class="btn btn-default" data-dismiss="modal">add</button>
+            <button type="button" id = "modal_delete" class="btn btn-default" data-dismiss="modal">delete</button>
           </div>
         </div>
       </div>
@@ -423,6 +456,8 @@
 
     <!-- 引入信息发布标签页js文件 -->
     <script src="../js/inf.js"></script>
+
+    <script src="../js/user_manage.js"></script>
 
 </body>
 </html>
